// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`.not.toBePositive fails when given a positive BigInt 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBePositive()</intensity>

Expected value to not be positive received:
  <red>5n</color>"
`;

exports[`.not.toBePositive fails when given a positive number 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).not.toBePositive()</intensity>

Expected value to not be positive received:
  <red>5</color>"
`;

exports[`.toBePositive fails when not given a positive BigInt 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBePositive()</intensity>

Expected value to be positive received:
  <red>-1n</color>"
`;

exports[`.toBePositive fails when not given a positive number 1`] = `
"<dim>expect(</intensity><red>received</color><dim>).toBePositive()</intensity>

Expected value to be positive received:
  <red>-1</color>"
`;
